package :: gradle -> kts 마이그레이션

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Go To Outside</string>
+    <string name="app_name">Go To Outside Android</string>
 </resources>
