--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Presentation</string>
+    <string name="login_go_to_outside">GoToOutside</string>
+    <string name="login">로그인</string>
+    <string name="login_if_no_account_go_to_register"> 계정이 없다면? <b>회원가입</b> </string>
+    <string name="next">다음</string>
+    <string name="label_login_id">아이디</string>
+    <string name="main_student_there_is_no_pass_add_pass">등록된 외출증이\n없습니다.\n\n외출증 추가하기</string>
+    <string name="pass">외출증</string>
+    <string name="main_student_pass_status_image">The pass status image</string>
+    <string name="main_student_pass_reason">사유</string>
 </resources>
